[gd_scene load_steps=2 format=3 uid="uid://bocbqw2n2nayw"]

[ext_resource type="Script" path="res://CombatUI.gd" id="1_ajo7l"]

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ajo7l")

[node name="BottomPanel" type="Panel" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -103.0
grow_horizontal = 2
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = -33.0
offset_right = 302.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Attack" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Attack"

[node name="Defend" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Defend"

[node name="Magic" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Magic"

[node name="Especial" type="Button" parent="BottomPanel/GridContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Especial"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -683.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Charcter1"
fit_content = true
autowrap_mode = 0

[node name="Control" type="Control" parent="VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/HFlowContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(1, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HFlowContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.595, 1)
size_flags_horizontal = 3
color = Color(0, 1, 0, 1)

[connection signal="pressed" from="BottomPanel/GridContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="BottomPanel/GridContainer/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="BottomPanel/GridContainer/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="BottomPanel/GridContainer/Especial" to="." method="_on_especial_pressed"]
